# web-diff-files-tree

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile-develop  Dockerfile.cpp  README.md  docker-compose.develop.yml  docker-compose.yml  wsjcpp.yml
example/: upload.py
html/: api.html  base_lib.php  browser.html  groups.html  index.html  update_db.php
html/api/add/: index.php
html/api/comment-add/: index.php
html/api/diff/: index.php
html/api/files/: index.php
html/api/groups/: index.php
html/api/groups-all/: index.php
html/api/versions-all/: index.php
html/conf.d/: config.php
html/css/: index.css
html/db_updates/: update0001.php  update0004.php  update0005.php  update0006.php  update0007.php  update0008.php
html/js/: api.js  index.js
src/: main.cpp
src.wsjcpp/: CMakeLists.txt
src/database/: model_diff_groups.cpp  model_diff_groups.h  model_file.cpp  model_file.h  model_file_diff.cpp  model_file_diff.h  model_group.cpp  model_group.h  model_group_for_version.cpp  model_group_for_version.h  model_version.cpp  model_version.h  models_basic.cpp  models_basic.h  models_cache.cpp  models_cache.h  models_diff.cpp  models_diff.h  mysql_storage.cpp  mysql_storage.h  mysql_storage_connection.cpp  mysql_storage_connection.h  mysql_storage_updates.cpp  mysql_storage_updates.h
src/server/: player_context.cpp  webdiff_http_server.cpp  webdiff_http_server.h  webdiff_server.cpp  webdiff_server.h  webdiff_ws_server.cpp  webdiff_ws_server.h
www/: base_lib.php  browser.html  browser.php  groups.html  groups.php  head.php  index.html  index.php  update_db.php  versions.php
www/api/: index.php
www/api/comment-hide/: index.php
www/api/diff/: index.php
www/api/groups/: index.php
www/conf.d/: config.php
www/css/: index.css
www/db_updates/: update0002.php  update0003.php  update0009.php
